# docs

./: .gitignore  CNAME  Gemfile  README.md  _config.yml  index.md
.github/workflows/: check_404.yml
_data/: navigation.yml
_includes/: README.md  footer_custom.html  head_custom.html
_sass/: README.md
_sass/custom/: custom.scss
assets/images/: README.md
clients/: README.md  tutorial.md
drivers/: README.md  best-practices.md  binary-transfers.md  coming-from-ascom.md  connection-plugins.md  driver-interface.md  driver-submission-guide.md  focuser.md  guider.md  helpful-functions.md  inter-driver-communication.md  logging.md  loops.md  project-setup.md  properties.md  safety-monitor.md  serialconnection.md  simple.md  standard-properties.md
drivers/advanced/: README.md  inter-driver-communication.md  logging.md  loops.md  pid-control.md
drivers/basics/: README.md  binary-transfers.md  coming-from-ascom.md  communication.md  custom-driver.md  driver-interface.md  helpful-functions.md  project-setup.md  properties.md  serialconnection.md  simple-driver.md
drivers/communications/: README.md  connection-plugins.md  gpio.md  hid.md  i2c.md  modbus.md  serial.md  system-setup.md  tcp.md  udp.md  usb.md  web-protocols.md
drivers/examples/indi_dummy_dome/: CMakeLists.txt  indi_dummy_dome.cpp  indi_dummy_dome.h  indi_dummy_dome.xml.cmake
drivers/examples/indi_dummy_dustcap/: CMakeLists.txt  indi_dummy_dustcap.cpp  indi_dummy_dustcap.h  indi_dummy_dustcap.xml.cmake
drivers/examples/indi_dummy_filterwheel/: CMakeLists.txt  README.md  indi_dummy_filterwheel.cpp  indi_dummy_filterwheel.h  indi_dummy_filterwheel.xml.cmake
drivers/examples/indi_dummy_focuser/: CMakeLists.txt  indi_dummy_focuser.cpp  indi_dummy_focuser.h  indi_dummy_focuser.xml.cmake
drivers/examples/indi_dummy_gps/: CMakeLists.txt  indi_dummy_gps.cpp  indi_dummy_gps.h  indi_dummy_gps.xml.cmake
drivers/examples/indi_dummy_lightbox/: CMakeLists.txt  indi_dummy_lightbox.cpp  indi_dummy_lightbox.h  indi_dummy_lightbox.xml.cmake
drivers/examples/indi_mycustomdriver/: CMakeLists.txt  indi_mycustomdriver.cpp  indi_mycustomdriver.h  indi_mycustomdriver.xml.cmake
drivers/tutorials/: README.md  tutorial-eight.md  tutorial-five.md  tutorial-four.md  tutorial-one.md  tutorial-seven.md  tutorial-six.md  tutorial-three.md  tutorial-two.md
getting-started/: README.md  indi-development-vm.md
guides/: README.md  best-practices.md  client-development.md  connection-plugins.md  driver-submission-guide.md  getting-started.md  protocol-guide.md  standard-properties.md  troubleshooting.md
indiserver/: README.md  indiserver-guide.md
interfaces/: README.md  alignment-subsystem.md  ccd-interface.md  dome-interface.md  filter-wheel-interface.md  focuser.md  guider.md  indidomeinterface.md  indidustcapinterface.md  indiinputinterface.md  indioutputinterface.md  indirotatorinterface.md  lightbox-interface.md  power-interface.md  telescope-interface.md  weather-interface.md
protocol/: README.md
pyindi-client/: README.md  migration.md
quick-guide/: README.md  getting-started.md
scripting/: README.md
support/: README.md  troubleshooting.md
